--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="static/style.css">
         <title>LifeText Account</title>
     </head>
     <body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="account.js"></script>
+        <script src="static/account.js"></script>
 
         <div class="wrapper">
 
