--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="static/style.css">
 		<title>LifeText Login</title>
 	</head>
 	<body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="login.js"></script>
+		<script src="static/login.js"></script>
 
 		<div class="wrapper">
 			<div class="container">
