Commit full of crap for Austin

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,8 +13,8 @@
 				<h1>Welcome</h1>
 
 				<form class="form">
-					<input type="text" placeholder="Username">
-					<input type="password" placeholder="Password">
+					<input type="text" placeholder="Username" id="username">
+					<input type="password" placeholder="Password" id="password">
 					<button type="submit" id="login-button">Login</button> <br/>
 					<button type="submit" id="sign-up-button">Sign Up</button>
 					<input type="text"
