--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -12,7 +12,7 @@
 
             <div class="container" visible="false" style="padding:10px 0">
                 <!--{% if current_user.is_authenticated %} -->
-                    <h1>{{ current_user.username }}'s Account</h1>
+                    <h1>{{ username }}'s Account</h1>
 
                     <form class="form" style="padding:10px 0">
                         <div id="attributes">
