--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="../static/style.css">
 		<title>LifeText Login</title>
+		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
 	<body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
