made the green background take up the whole page

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="../static/style.css">
         <title>LifeText Account</title>
     </head>
     <body>
@@ -10,7 +10,7 @@
 
         <div class="wrapper">
 
-            <div class="container" visible="false" style="padding:10px 0">
+            <div class="container" visible="false" style="padding:10px 0; margin-top: 10%;">
                 <!--{% if current_user.is_authenticated %} -->
                     <h1>{{ current_user.username }}'s Account</h1>
 
