--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="static/style.css">
+		<link rel="stylesheet" href="../static/style.css">
 		<title>LifeText Login</title>
 	</head>
 	<body>
@@ -9,8 +9,9 @@
 		<script src="static/login.js"></script>
 
 		<div class="wrapper">
-			<div class="container">
-				<h1>Welcome</h1>
+			<div class="container" style="margin-top:10%;">
+				<h1>LifeText</h1>
+                <h4>No cell data, but need info? We've got you covered. Just text (262) 222-2437</h4>
 
 				<form class="form">
 					<input type="text" placeholder="Username">
